fix card to light on dark mode

--- a/frontend/src/theme/variables.scss
+++ b/frontend/src/theme/variables.scss
@@ -181,7 +181,7 @@ http://ionicframework.com/docs/theming/ */
 
     --ion-item-background: #000;
 
-    --ion-card-background: #1c1c1d;
+    --ion-card-background: #101010;
   }
 
   .ios ion-modal {
